Collapsing weird, will fix tmrw

--- a/src/Components/css/todoList.css
+++ b/src/Components/css/todoList.css
@@ -46,22 +46,21 @@
 
 #style-1::-webkit-scrollbar-track
 {
-	-webkit-box-shadow: inset 0 0 6px rgba(70, 70, 70, 0.3);
 	border-radius: 20px;
 	background-color: #F5F5F5;
 }
 
 #style-1::-webkit-scrollbar
 {
-	width: 7px;
+	width: 5px;
+    border-radius: 20px;
 	background-color: #F5F5F5;
 }
 
 #style-1::-webkit-scrollbar-thumb
 {
 	border-radius: 20px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #555;
+	background-color: rgb(175, 175, 175);
 }
 
 .todoList-entry-opened {
@@ -88,20 +87,19 @@
 
 .todoList-entry-remove-button {
     float: right;
-    margin-right: 3%;
+    position: absolute;
+    bottom: 5%;
+    right: 2%;
     background-color: transparent;
     border-radius: 10px;
-    color: rgb(153, 153, 153);
-    
+    color: rgb(252, 115, 115);
     border-color: transparent;
 
-    border-color: red;
-    border-style: dashed;
 }
 
 .todoList-entry-remove-button:hover {
     cursor: pointer;
-    color: rgb(68, 68, 68);
+    color: rgb(255, 0, 0);
 }
 
 .expand-button {
@@ -163,6 +161,7 @@
 .todoList-entry-header {
     display: flex;
     height: 100%;
+    position: relative;
     /* border-style: dashed;
     border-color: green; */
 
@@ -170,7 +169,7 @@
 
 .todoList-entry-header-content {
     width: 100%;
-    margin: 1%;
+    margin: 2%;
     /* border-style: dashed;
     border-color: blue; */
 }
